# dreidelDNN

./: .gitignore  CMakeLists.txt  MODELZOO.md  README.md  ROADMAP_ALIEN.md  autoencoder_results.csv  bench_clip  bench_coord  bench_drop  bench_gn  bench_init  bench_zenith_nano_full  benchmark_output.txt  benchmark_quantum  benchmark_results.csv  benchmark_results_ablation.csv  benchmark_results_accuracy.csv  benchmark_results_slm.csv  benchmark_results_wavelet.csv  benchmark_zenith_ablation  benchmark_zenith_autoencoder  benchmark_zenith_conv  cachegrind.out  cachegrind.out.12689  cachegrind.out.2406  cachegrind.out.4655  compare_zenith_conv_accuracy  documentation.md  ivrit_requirements.txt  output.txt  output_final.txt  quantum_benchmark_results.csv  requirements.txt  run_taesd  run_zenith_512.sh  scaling_results.csv  tensor_output.txt  test_deep_spectral  test_expressivity.py  test_outputs.txt  (+15 more)
benchmarks/: RESULTS_OPTIMIZERS.md  benchmark_alsh.cpp  benchmark_autoencoder.cpp  benchmark_comparative_ae.cpp  benchmark_optimizers.cpp  benchmark_quantum.cpp  benchmark_taesd.cpp  benchmark_wavelet_accuracy.cpp  benchmark_wavelet_ae.cpp  benchmark_zenith_ablation.cpp  benchmark_zenith_autoencoder  benchmark_zenith_autoencoder.cpp  benchmark_zenith_conv  benchmark_zenith_conv.cpp  benchmark_zenith_cout  benchmark_zenith_cout.cpp  benchmark_zenith_init.cpp  benchmark_zenith_l0  benchmark_zenith_l0.cpp  benchmark_zenith_large_only  benchmark_zenith_nano_f16.cpp  benchmark_zenith_optimizers.cpp  benchmark_zenith_restoration.cpp  benchmark_zenith_sequency.cpp  benchmark_zenith_srig.cpp
docs/: BENCHMARK_WAVELET_AE.md  BENCHMARK_ZENITH_PRUNE.md  COMPARATIVE_RECONSTRUCTION.md  GEMS_PERFORMANCE.md  IVRIT_DESIGN.md  LEGACY.md  OPTIMIZATION_CYCLE_4.md  RUNNING.md  ZENITH_ACCURACY_ABLATION.md  ZENITH_DSG_ANALYSIS.md  ZENITH_NANO_ARCHITECTURE.md  ZENITH_RIG_ANALYSIS.md  ZENITH_TAESD_DETAILS.md  ZENITH_TECHNOLOGY.md
examples/: ZenithNano_Pipelined.cpp  benchmark_zenith_nano_full.cpp  compare_zenith_conv.cpp  compare_zenith_conv_accuracy.cpp  compare_zenith_ghost_vs_conv_ghost.cpp  compare_zenith_ghost_vs_overhaul.cpp  hello_world.cpp  jules_agent.cpp  jules_autoencoder.cpp  run_taesd.cpp  test_conv_ghost.cpp  test_spectral_vit.cpp  test_zenith_ghost.cpp  test_zenith_reconstruction_512.cpp  train_comparative_ae  train_comparative_ae.cpp  train_comparative_ae_debug  train_spectral_vit.cpp  train_spectral_whisper.cpp  train_wavelet_autoencoder.cpp  train_zenith_100_epochs.cpp  train_zenith_autoencoder.cpp  train_zenith_ghost_wavelet.cpp  train_zenith_hydra.cpp  train_zenith_lasso  train_zenith_lasso.cpp  (+8 more)
(+202 files in other folders)
